# rustle

./: Cargo.toml  README.md  pyproject.toml  test.txt
src/: lib.rs
