[package]
name = "title_parser"
version = "0.1.2"
edition = "2021"

[lib]
# `#[pymodule]` in `src/lib.rs`. (i.e. import `title_parser`)
name = "title_parser"
#
# "cdylib" is necessary to produce a shared library for Python to import from.
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.19.0"
convert_case = "0.6.0"